# sqx

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  PROJECT_STATUS.md  README.md  mempalace.yaml
DOCS/: ARCHITECTURE.md  FEATURE_AUDIT.md  IMPLEMENTATION_BACKLOG.md  PLAN_HEADLESS_CRAWLER.md  ROADMAP_90_DAYS.md  SQLMAP_INTEGRATION.md  SQLMAP_KILLER_MANIFESTO.md  SQX_CORE_VS_PRO.md
data/intel.kb/: db  snap.00000000000003CA
sqx-cli/: Cargo.toml  README.md
sqx-cli/src/: cli.rs  main.rs  startup.rs
sqx-cli/src/commands/: bench.rs  extraction.rs  intel.rs  mod.rs  replay.rs  reporting.rs  scanning.rs  shell.rs  takeover.rs  validate.rs
sqx-core/: Cargo.toml  README.md
sqx-core/src/: lib.rs  models.rs  oob.rs
sqx-core/src/bench/: mod.rs
sqx-core/src/intel/: collector.rs  db.rs  mod.rs  types.rs
sqx-core/src/intel/sources/: crtsh.rs  distro.rs  fofa.rs  github.rs  mod.rs  nvd.rs  shodan.rs  wayback.rs
sqx-core/src/sqx/: ai_advisor.rs  ai_payloads.rs  basic_scan.rs  detector.rs  findings.rs  http.rs  info.rs  mod.rs  models.rs  param_scan.rs  payload_fetcher.rs  payloads.rs  post_scan.rs  similarity.rs  smart_scan.rs  stealth.rs  url_utils.rs
sqx-core/src/sqx/crawler/: mod.rs  models.rs  spider.rs
sqx-core/src/sqx/dbms/: dialect.rs  exotic.rs  major.rs  mod.rs
sqx-core/src/sqx/evasion/: mod.rs  tamper.rs  tamper_chain.rs  waf_bypass.rs
sqx-core/src/sqx/evasion/tamper/: encoding.rs  keywords.rs  misc.rs  mod.rs  mysql.rs  odbc.rs  operators.rs  quotes.rs  spaces.rs
sqx-core/src/sqx/extraction/: blind.rs  dump.rs  file_read.rs  file_write.rs  mod.rs  schema.rs  time_blind.rs
sqx-core/src/sqx/fingerprint/: models.rs  prober.rs
sqx-core/src/sqx/payloads/: boundaries.rs  bundled.rs  fetcher.rs  mod.rs  parser.rs  types.rs
sqx-core/src/sqx/pipeline/: augmented.rs  mod.rs  models.rs  pipeline.rs
sqx-core/src/sqx/reporting/: markdown.rs  mod.rs  sarif.rs
sqx-core/src/sqx/request/: mod.rs  parser.rs
sqx-core/src/sqx/session/: manager.rs  models.rs
sqx-core/src/sqx/shell/: fast_extract.rs  mod.rs  os_shell.rs  sql_shell.rs  types.rs
sqx-core/src/sqx/similarity/: error_classifier.rs  extraction.rs  minhash.rs  mod.rs  waf_detector.rs
sqx-core/src/sqx/takeover/: custom_sql.rs  file_read.rs  file_write.rs  mod.rs  os_exec.rs
sqx-core/src/sqx/techniques/: boolean_blind.rs  error_based.rs  header_injection.rs  mod.rs  oob.rs  stacked.rs  time_based.rs  union_based.rs
sqx-core/src/validator/: consensus.rs  mod.rs  patterns.rs  semantic.rs  syntax.rs  types.rs
sqx-core/tests/: integration_test.rs  manual_detect.rs
sqx-core/tests/integration/: README.md  docker-compose.yml  run.sh
sqx-gui/: Cargo.toml
sqx-gui/src/: gui.rs  main.rs
src/: cli.rs  gui.rs  lib.rs  main.rs  oob.rs
src/sqx/: ai_advisor.rs  detector.rs  http.rs  mod.rs  models.rs  similarity.rs
src/sqx/crawler/: mod.rs  models.rs  spider.rs
src/sqx/dbms/: dialect.rs  exotic.rs  major.rs  mod.rs
src/sqx/evasion/: mod.rs
src/sqx/extraction/: blind.rs  dump.rs  file_read.rs  mod.rs  schema.rs  time_blind.rs
src/sqx/fingerprint/: mod.rs  prober.rs
src/sqx/pipeline/: mod.rs  models.rs  pipeline.rs
src/sqx/reporting/: json_report.rs  markdown.rs  sarif.rs
src/sqx/session/: manager.rs  mod.rs  models.rs
src/sqx/techniques/: boolean_blind.rs  error_based.rs  header_injection.rs  oob.rs  stacked.rs  time_based.rs  union_based.rs
tests/: payload_audit.md
tests/db-matrix/: README.md  docker-compose.yml
tests/db-matrix/init/clickhouse/: schema.sql
tests/db-matrix/init/cockroachdb/: schema.sql
tests/db-matrix/init/firebird/: schema.sql
tests/db-matrix/init/mssql/: entrypoint.sh  mssql-sqli-labs.sql  test-data.sql
tests/db-matrix/init/mysql/: sqli-labs.sql  test-data.sql
tests/db-matrix/init/postgres/: pg-sqli-labs.sql  test-data.sql
tests/db-matrix/init/sqlite/: schema.sql  test-data.sql
tests/db-matrix/scripts/: test-sqx.sh  verify-all.sh
tests/db-matrix/webapps/: Dockerfile.php
tests/db-matrix/webapps/clickhouse/: error_based_advanced.php
tests/db-matrix/webapps/cockroachdb/: error_based_advanced.php
tests/db-matrix/webapps/firebird/: error_based_advanced.php
tests/db-matrix/webapps/h2/: error_based_advanced.php
tests/db-matrix/webapps/mssql/: error_based_advanced.php  index.php
tests/db-matrix/webapps/mysql/: Less-11.php  advanced.php  error_based_advanced.php  index.php  safe.php
tests/db-matrix/webapps/postgres/: error_based_advanced.php  index.php
tests/db-matrix/webapps/sqlite/: index.php
tests/db-matrix/webapps/tidb/: error_based_advanced.php  init.php
tests/false-positive-suite/: README.md  docker-compose.yml  run-tests.sh
tests/false-positive-suite/init/mysql/: init.sql
tests/false-positive-suite/init/postgres/: init.sql
tests/false-positive-suite/node-safe/: package-lock.json  package.json  server.js
tests/false-positive-suite/php-safe/: index.php
tests/false-positive-suite/python-safe/: app.py
