[workspace]
members = [
    # Core (Open Source / Free)
    "sqx-core",         # Detection engine
    "sqx-cli",          # CLI interface
]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["Intelexia Team"]
edition = "2024"
rust-version = "1.85"

[workspace.dependencies]
tokio        = { version = "1", features = ["full"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
anyhow       = "1"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest      = { version = "0.12", features = ["json", "rustls-tls", "socks", "gzip", "deflate", "brotli"] }
regex        = "1"
uuid         = { version = "1", features = ["v4"] }
chrono       = { version = "0.4", features = ["serde"] }
url          = "2"
urlencoding  = "2"
base64       = "0.22"
lazy_static  = "1"
tokio-stream = "0.1"
async-trait  = "0.1"
axum         = "0.8"
clap         = { version = "4", features = ["derive", "color"] }
