[package]
name = "sqx-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "SQX core engine — SQL injection detection and extraction"

[dependencies]
tokio        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
anyhow       = { workspace = true }
tracing      = { workspace = true }
reqwest      = { workspace = true }
regex        = { workspace = true }
uuid         = { workspace = true }
chrono       = { workspace = true }
url          = { workspace = true }
urlencoding  = { workspace = true }
base64       = { workspace = true }
lazy_static  = { workspace = true }
tokio-stream = { workspace = true }
async-trait  = { workspace = true }
axum         = { workspace = true }

# IntelCollector + PayloadValidator dependencies
sqlparser    = "0.52"
sled         = "0.34"
strsim       = "0.11"

# Headless browser crawler
chromiumoxide = { version = "0.9", default-features = false }
which = "6.0"
thiserror = "1.0"
futures-util = "0.3"

[dev-dependencies]
wiremock     = "0.6"

[profile.release]
opt-level   = 3
lto         = true
codegen-units = 1
strip       = true
panic       = "abort"
