[package]
name = "sqx-gui"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "SQX desktop GUI (egui/eframe)"

[[bin]]
name = "sqx-gui"
path = "src/main.rs"

[dependencies]
sqx-core = { path = "../sqx-core" }
eframe = { workspace = true }
egui = { workspace = true }
egui_extras = { workspace = true }
arboard = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
